force-app/main/default/objects/Attribution_Test__c/Attribution_Test__c.object-meta.xml
<CustomObject>
    <label>Attribution Test</label>
    <nameField>
        <label>Test Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Attribution Tests</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>