force-app/main/default/objects/Attribution_Test__c/fields/Minimum_Effect_Size__c.field-meta.xml
<CustomField>
    <fullName>Minimum_Effect_Size__c</fullName>
    <label>Minimum Effect Size</label>
    <precision>5</precision>
    <scale>4</scale>
    <type>Number</type>
</CustomField>