force-app/main/default/objects/Attribution_Test__c/fields/Model_B__c.field-meta.xml
<CustomField>
    <fullName>Model_B__c</fullName>
    <label>Model B</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>LastTouch</fullName>
                <label>Last Touch</label>
            </value>
            <value>
                <fullName>FirstTouch</fullName>
                <label>First Touch</label>
            </value>
            <value>
                <fullName>Linear</fullName>
            </value>
            <value>
                <fullName>TimeDecay</fullName>
                <label>Time Decay</label>
            </value>
            <value>
                <fullName>PositionBased</fullName>
                <label>Position Based</label>
            </value>
            <value>
                <fullName>MarkovChain</fullName>
                <label>Markov Chain</label>
            </value>
            <value>
                <fullName>ShapleyValue</fullName>
                <label>Shapley Value</label>
            </value>
            <value>
                <fullName>Ensemble</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>