force-app/main/default/objects/Attribution_Test__c/fields/Significance_Level__c.field-meta.xml
<CustomField>
    <fullName>Significance_Level__c</fullName>
    <label>Significance Level</label>
    <precision>5</precision>
    <scale>4</scale>
    <type>Number</type>
</CustomField>