force-app/main/default/objects/Attribution_Test__c/fields/Test_End_Date__c.field-meta.xml
<CustomField>
    <fullName>Test_End_Date__c</fullName>
    <label>Test End Date</label>
    <type>DateTime</type>
</CustomField>