force-app/main/default/objects/Attribution_Test__c/fields/Test_ID__c.field-meta.xml
<CustomField>
    <fullName>Test_ID__c</fullName>
    <externalId>true</externalId>
    <label>Test ID</label>
    <length>50</length>
    <required>true</required>
    <type>Text</type>
</CustomField>