force-app/main/default/objects/Attribution_Test__c/fields/Test_Start_Date__c.field-meta.xml
<CustomField>
    <fullName>Test_Start_Date__c</fullName>
    <label>Test Start Date</label>
    <required>true</required>
    <type>DateTime</type>
</CustomField>