force-app/main/default/objects/Attribution_Test__c/fields/Test_Status__c.field-meta.xml
<CustomField>
    <fullName>Test_Status__c</fullName>
    <label>Test Status</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Planning</fullName>
            </value>
            <value>
                <fullName>Running</fullName>
            </value>
            <value>
                <fullName>Completed</fullName>
            </value>
            <value>
                <fullName>Cancelled</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>