force-app/main/default/objects/Attribution_Test__c/fields/Winner__c.field-meta.xml
<CustomField>
    <fullName>Winner__c</fullName>
    <label>Winner</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Model_A</fullName>
                <label>Model A</label>
            </value>
            <value>
                <fullName>Model_B</fullName>
                <label>Model B</label>
            </value>
            <value>
                <fullName>No_Difference</fullName>
                <label>No Difference</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>